discussion/kv_engine/160904/160904_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39338: Open read only magma KVStore if DiskFull

Change-Id: I7bbc2a63321529ae6027a8d245e30f9810a948b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-07 10:47:09.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-07 10:54:50.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33619/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39461/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1697/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1697/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12793/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1677/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13646/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13646/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14320/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14320/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21830/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13884/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13884/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12034/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:169:5: error: no template named "TestingHook" [clang-diagnostic-error]
    TestingHook<> setReadOnlyHook;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:568:43: warning: use nullptr [modernize-use-nullptr]
        kvstoreConfig->setMakeDirectoryFn(0);
                                          ^
                                          nullptr

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12034/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:169:5:
error: no template named "TestingHook" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12034/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10821/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
